# notes-app

./: .gitignore  latest.json  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: commands.rs  lib.rs  main.rs  updater.rs  windows.rs
src-tauri/src/board/: board.rs  mod.rs
src-tauri/src/window/: manager.rs  mod.rs  window.rs
