[package]
name = "notes"
version = "0.1.0"
description = "Notes app"
authors = ["webshining"]
edition = "2021"

[lib]
name = "notes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = {version = "1.18", features = ["v4"] }
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-window-state = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"

